@@ -1,0 +1,10 @@
+package com.buschmais.jqassistant.plugin.java.api.model;
+
+import com.buschmais.xo.neo4j.api.annotation.Label;
+
+/**
+ * Denotes a record type.
+ */
+@Label("Record")
+public interface RecordTypeDescriptor extends ClassFileDescriptor {
+}
